[tool.poetry]
name = "price-compare"
version = "0.1.0"
description = "A Price Comparison Tool"
authors = ["shres28 <123116309+shres28@users.noreply.github.com>"]
license = "Free to use"
readme = "README.md"
packages = [{include = "price_compare"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
panda = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
